--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@prisma/client": "^4.4.0",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.0",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
