delete bookmark logic

--- a/.github/workflows/nomato-cd.yml
+++ b/.github/workflows/nomato-cd.yml
@@ -6,7 +6,7 @@ name: CD
 # events but only for the master branch
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -28,7 +28,7 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
           script: |
-            cd ../nomato
+            cd ~/nomato
             git pull origin main
             npm install
             cp ../nomato-env/.env .
