--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.4.0",
+    "crypto-js": "^4.1.1",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
     "nodemailer": "^6.8.0",
@@ -19,6 +20,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "18.11.0",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.21",
