--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.4.0",
+    "@svgr/webpack": "^6.5.1",
     "crypto-js": "^4.1.1",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
