--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.4.0",
     "@svgr/webpack": "^6.5.1",
     "crypto-js": "^4.1.1",
+    "firebase": "^9.14.0",
     "next": "12.3.1",
     "next-auth": "^4.15.0",
     "nodemailer": "^6.8.0",
