--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
