--- a/package.json
+++ b/package.json
@@ -10,30 +10,34 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.4.0",
+    "@prisma/client": "^5.2.0",
     "@svgr/webpack": "^6.5.1",
+    "bcrypt": "^5.1.1",
     "crypto-js": "^4.1.1",
     "firebase": "^9.14.0",
     "next": "12.3.1",
-    "next-auth": "^4.15.0",
+    "next-auth": "^4.23.1",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "18.11.0",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/uuid": "^8.3.4",
+    "@types/validator": "^13.11.1",
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
-    "prisma": "^4.4.0",
+    "prisma": "^5.2.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
