change repo name

--- a/.github/workflows/nomato-cd.yml
+++ b/.github/workflows/nomato-cd.yml
@@ -36,4 +36,4 @@ jobs:
             cp ../nomato-env/.env .
             npx prisma generate
             npm run build
-            pm2 restart nomato-v2
+            pm2 restart tempat
