--- a/.github/workflows/nomato-cd.yml
+++ b/.github/workflows/nomato-cd.yml
@@ -13,7 +13,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -28,12 +28,12 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
           script: |
-            cd ~/nomato
+            cd ~/tempat
             git pull origin main
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             npm install
-            cp ../nomato-env/.env .
+            cp ../tempat-env/.env .
             npx prisma generate
             npm run build
             pm2 restart tempat
