--- a/.github/workflows/tempat-cd.yml
+++ b/.github/workflows/tempat-cd.yml
@@ -28,6 +28,8 @@ jobs:
           script: |
             cd ~/tempat
             git pull origin main
+            export NVM_DIR=~/.nvm
+            source ~/.nvm/nvm.sh
             cp ../tempat-env/.env .
             npx prisma generate
             npm run build
