--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "crypto-js": "^4.1.1",
     "firebase": "^9.14.0",
+    "framer-motion": "^10.16.4",
     "next": "12.3.1",
     "next-auth": "^4.23.1",
     "nodemailer": "^6.8.0",
