--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.2.0",
     "@svgr/webpack": "^6.5.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "crypto-js": "^4.1.1",
     "firebase": "^9.14.0",
     "framer-motion": "^10.16.4",
@@ -26,7 +26,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "18.11.0",
     "@types/nodemailer": "^6.4.6",
