--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.470.0",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^5.2.0",
+    "@prisma/client": "^5.7.0",
     "@svgr/webpack": "^6.5.1",
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.1.1",
     "firebase": "^9.14.0",
     "framer-motion": "^10.16.4",
+    "mime-types": "^2.1.35",
     "next": "12.3.1",
     "next-auth": "^4.23.1",
     "nodemailer": "^6.8.0",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.1.1",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "18.11.0",
     "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.21",
